# llmXive

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build_proposal.py  gpu-server-proposal.tex  mypy.ini  pyproject.toml  ruff.toml
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/: .gitignore  .ruff.toml  README.md  activity.jsonl  pyproject.toml  requirements.txt
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/code/: __init__.py  config.py  main.py
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/contracts/: kinetic_trace.schema.yaml  solvent.schema.yaml
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/data/: __init__.py
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/docs/: __init__.py
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/figures/: __init__.py
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/idea/: research_question_validation.md
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/paper/: __init__.py
projects/PROJ-004-solvent-effects-on-photo-fries-rearrange/tests/: __init__.py
projects/PROJ-008-psychology-research/: .black.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  activity.jsonl  pyproject.toml  quickstart.md  requirements.txt
projects/PROJ-008-psychology-research/code/: .ruff.toml  __init__.py  pyproject.toml
projects/PROJ-008-psychology-research/contracts/: __init__.py  cleaned_study.schema.yaml  effect_size.schema.yaml
projects/PROJ-008-psychology-research/data/: __init__.py
projects/PROJ-008-psychology-research/docs/: __init__.py  analysis-plan.md  ethics_determination.md  protocol.md  results.md
projects/PROJ-008-psychology-research/idea/: psychology-research.md  research_question_validation.md
projects/PROJ-008-psychology-research/scripts/: __init__.py  hash_artifacts.py  run_cleaner.py  run_verification.sh  setup_linting.sh  validate_contracts.py
projects/PROJ-008-psychology-research/tests/: __init__.py
projects/PROJ-016-evaluating-the-effectiveness-of-communit/: .ruff.toml  pyproject.toml  requirements.txt
projects/PROJ-016-evaluating-the-effectiveness-of-communit/code/: .black.toml  .pre-commit-config.yaml  .ruff.toml  README_LINTING.md  __init__.py  config.py  logging_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_data_dirs.py  setup_project.py
projects/PROJ-016-evaluating-the-effectiveness-of-communit/idea/: research_question_validation.md
projects/PROJ-016-evaluating-the-effectiveness-of-communit/tests/: test_setup.py  (+8 more)
projects/PROJ-019-exploring-the-mechanisms-of-gene-regulat/: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt
projects/PROJ-020-the-use-of-climate-smart-agricultural-pr/: .ruff.toml  pyproject.toml  pytest.ini  quickstart.md  requirements.txt
projects/PROJ-021-understanding-oceanic-phytoplankton-comm/: .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml  quickstart.md  requirements.txt  setup.py
projects/PROJ-026-the-influence-of-visual-complexity-on-im/: .black  .black.toml  .pre-commit-config.yaml  .ruff.toml  pyproject.toml  research.md
projects/PROJ-034-quantifying-uncertainty-in-small-sample-/: README.md  pyproject.toml  pytest.ini  requirements.txt  research.md
projects/PROJ-035-exploring-the-correlation-between-crysta/: pyproject.toml  requirements.txt
projects/PROJ-037-investigating-the-correlation-between-gu/: .gitignore  README.md  activity.jsonl  pyproject.toml  requirements.txt  setup.cfg  setup_project.py
projects/PROJ-052-leveraging-llms-for-automated-test-case-/: pyproject.toml  requirements.txt  setup_project.py
projects/PROJ-054-assessing-the-validity-of-p-values-in-hi/: .black.toml  .gitignore  .ruff.toml  README.md  activity.jsonl  pyproject.toml  requirements.txt
projects/PROJ-058-the-role-of-epigenetic-drift-in-adaptive/: .black.toml  .ruff.toml  activity.jsonl  pyproject.toml  requirements.txt
projects/PROJ-068-evaluating-the-performance-of-different-/: README.md  pyproject.toml  requirements.txt
projects/PROJ-071-exploring-the-correlation-between-molecu/: .gitignore  .ruff.toml  README.md  config.yaml  plan.md  pyproject.toml  quickstart.md  requirements.txt
projects/PROJ-072-investigating-the-predictive-power-of-br/: .ruff.toml  pyproject.toml  requirements.txt  setup_project.py
projects/PROJ-074-statistical-modeling-of-network-propagat/: .gitignore  .pre-commit-config.yaml  README.md  activity.jsonl  data-model.md  pyproject.toml  quickstart.md  requirements.txt  run_pipeline.sh  setup_venv.sh
projects/PROJ-077-investigating-the-correlation-between-gu/: pyproject.toml  requirements.txt
projects/PROJ-078-predicting-polymer-degradation-pathways-/: README.md  README_SETUP.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
projects/PROJ-082-investigating-the-correlation-between-st/: .black.toml  .gitignore  .ruff.toml  pyproject.toml  requirements.txt
projects/PROJ-085-predicting-battery-electrolyte-decomposi/: .black.toml  .ruff.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
projects/PROJ-086-exploring-the-impact-of-molecular-dynami/: pyproject.toml  requirements.txt
projects/PROJ-087-investigating-the-correlation-between-gu/: README.md  pyproject.toml  requirements.txt
projects/PROJ-089-investigating-the-correlation-between-co/: .pre-commit-config.yaml  .ruff.toml  pyproject.toml  quickstart.md  requirements.txt
projects/PROJ-090-evaluating-the-robustness-of-llm-generat/: .ruff.toml  activity.jsonl  pyproject.toml  requirements.txt  ruff.toml
projects/PROJ-092-statistical-analysis-of-feature-importan/: .gitignore  .isort.cfg  .pylintrc  README.md  pyproject.toml  requirements.txt
projects/PROJ-095-statistical-analysis-of-lottery-number-f/: pyproject.toml  requirements.txt
projects/PROJ-105-statistical-analysis-of-publicly-availab/: activity.jsonl  pyproject.toml  requirements.txt
projects/PROJ-107-quantifying-the-effects-of-dark-matter-h/: .ruff.toml  README.md  pyproject.toml  requirements.txt
(+83247 files in other folders)
