[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive"
version = "0.1.0"
description = "Automated scientific-discovery pipeline driven by Spec-Kit-per-project agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Contextual Dynamics Lab", email = "research.computing@dartmouth.edu" }]
dependencies = [
  # LLM / agent framework
  "langchain>=0.3",
  "langgraph>=0.2",
  "langchain-dartmouth>=0.3.1",
  "langchain-huggingface>=0.1",
  "huggingface_hub",
  # Data validation
  "pydantic>=2",
  "jsonschema",
  # Operational
  "tenacity",
  "pyyaml",
  "httpx",
  "gitpython",
  "arxiv",
  "crossref-commons",
  # Spec 005 librarian agent — PDF text extraction for ≥10% PDF-sample audit (Q2)
  "pypdf>=4",
  # Paper-stage
  "matplotlib",
  "seaborn",
  "numpy",
  "scipy",
  "pandas",
  # scripts/extract_paper_content.py uses it indirectly via regex but
  # pylatexenc is the canonical pure-python LaTeX parser used as a
  # fallback for future structured walks (e.g. AST-aware citation
  # rewrites). Pin to a stable major.
  "pylatexenc>=2.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[project.scripts]
llmxive = "llmxive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["llmxive*"]

[tool.setuptools.package-data]
llmxive = ["py.typed"]
