[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proj-008-psychology-research"
version = "0.1.0"
description = "Meta-analysis of mindfulness interventions for social skills in ASD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pytest>=7.4.0",
    "bayesmeta>=0.3.0",
    "pdfplumber>=0.9.0",
    "pytesseract>=0.3.10",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
