[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindfulness-asd-social-skills"
version = "0.1.0"
description = "Meta-analysis of Mindfulness Components and Delivery Formats in ASD Social Skills"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "requests",
    "pyyaml",
    "pytest",
    "bayesmeta",
    "pdfplumber",
    "pytesseract",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.ruff]
# Linting configuration
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501", # Line too long (handled by black)
    "B008", # Do not perform function calls in argument defaults (common in Pydantic/FastAPI)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # Allow assertions in tests

[tool.ruff.isort]
known-first-party = ["data", "utils", "analysis", "viz"]
force-sort-within-sections = true

[tool.black]
# Formatting configuration
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["code"]
include = ["data*", "utils*", "analysis*", "viz*"]
