[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive-csa-food-security"
version = "0.1.0"
description = "Climate-Smart Agricultural Practices Analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "statsmodels==0.14.2",
    "geopandas==0.14.4",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "requests==2.32.3",
    "pyyaml==6.0.1",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]