[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantify-uncertainty-small-sample"
version = "0.1.0"
description = "Quantifying Uncertainty in Small Sample Regression Models"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "cmdstanpy",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
exclude = [
    "venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
]
ignore = ["E203", "W503"]