[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projet-037-microbiome-circadian"
version = "0.1.0"
description = "Investigating the correlation between gut microbiome composition and circadian rhythm disruption"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "biom-format",
    "skbio",
    "numpy",
    "matplotlib",
    "seaborn",
    "requests",
    "biopython",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["code"]
known_third_party = ["pandas", "numpy", "sklearn", "scipy", "biom", "skbio", "statsmodels"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
per-file-ignores = [
    "__init__.py:F401",
]
count = true
statistics = true
show-source = true
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
