[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive-proj-052"
version = "0.1.0"
description = "Leveraging LLMs for Automated Test Case Generation from Natural Language Requirements"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python",
    "pandas",
    "scipy",
    "jinja2",
    "pyyaml",
    "jsonschema",
    "pytest",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | __pycache__
  | data
  | contracts
  | specs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # allow asserts in tests

[tool.ruff.isort]
known-first-party = ["config", "data_loader", "llm_generator", "test_executor", "analyzer", "report_generator"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"