[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive-bloom-benchmark"
version = "0.1.0"
description = "Evaluating the performance of different data structures in implementing Bloom filters."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "memory-profiler>=0.61.0",
    "pytest>=7.3.0",
    "bitarray>=2.7.0",
    "murmurhash3>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]