[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pro-077-microbiome-cognition"
version = "0.1.0"
description = "Investigating the correlation between gut microbiome diversity and cognitive performance"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.0.3",
    "numpy==1.24.3",
    "scikit-bio==0.5.9",
    "scikit-learn==1.3.0",
    "statsmodels==0.14.0",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "pyyaml==6.0.1",
    "scipy==1.11.1",
]

[project.optional-dependencies]
dev = [
    "flake8==6.1.0",
    "black==23.7.0",
    "pytest==7.4.0",
    "mypy==1.5.1",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
]
per-file-ignores = [
    "__init__.py:F401"
]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true