[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive-proj-086"
version = "0.1.0"
description = "Exploring the Impact of Molecular Dynamics Simulation Parameters on Predicted Protein-Ligand Binding Affinity"
requires-python = ">=3.9"
dependencies = [
    "openmm",
    "openmmtools",
    "mdtraj",
    "pandas",
    "scipy",
    "statsmodels",
    "pyyaml",
    "requests",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (black handles this)
    "B008", # do not perform function calls in argument defaults (common in ML/MD setups)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # allow assert in tests

[tool.ruff.isort]
known-first-party = ["code", "tests"]
force-sort-within-sections = true