[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive-evaluating-robustness"
version = "0.1.0"
description = "Evaluating the Robustness of LLM-Generated Code to Input Perturbations"
requires-python = ">=3.11"
dependencies = [
    "transformers",
    "datasets",
    "sentence-transformers",
    "bitsandbytes",
    "scikit-learn",
    "statsmodels",
    "pandas",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | data
)/
'''

[tool.ruff]
# Inherits from .ruff.toml if present, or uses these inline settings
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "utils", "data", "model", "analysis"]
