[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive-robustness-eval"
version = "0.1.0"
description = "Evaluating the Robustness of LLM-Generated Code to Input Perturbations"
requires-python = ">=3.11"
dependencies = [
    "transformers",
    "datasets",
    "sentence-transformers",
    "bitsandbytes",
    "scikit-learn",
    "statsmodels",
    "pandas",
    "pytest",
    "ruff",
    "black",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py for re-exports

[tool.ruff.isort]
known-first-party = ["config", "data", "model", "analysis", "utils"]
known-third-party = ["datasets", "sentence_transformers", "torch", "pandas", "statsmodels", "sklearn", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"